@@ -53,6 +53,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|BitSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|LinkedHashMap
 import|;
 end_import
@@ -810,6 +820,361 @@ return|return
 literal|false
 return|;
 block|}
+comment|// NOTE: This is for generating the internal path name for partitions. Users
+comment|// should always use the MetaStore API to get the path name for a partition.
+comment|// Users should not directly take partition values and turn it into a path
+comment|// name by themselves, because the logic below may change in the future.
+comment|//
+comment|// In the future, it's OK to add new chars to the escape list, and old data
+comment|// won't be corrupt, because the full path name in metastore is stored.
+comment|// In that case, Hive will continue to read the old data, but when it creates
+comment|// new partitions, it will use new names.
+specifier|static
+name|BitSet
+name|charToEscape
+init|=
+operator|new
+name|BitSet
+argument_list|(
+literal|128
+argument_list|)
+decl_stmt|;
+static|static
+block|{
+for|for
+control|(
+name|char
+name|c
+init|=
+literal|0
+init|;
+name|c
+operator|<
+literal|' '
+condition|;
+name|c
+operator|++
+control|)
+block|{
+name|charToEscape
+operator|.
+name|set
+argument_list|(
+name|c
+argument_list|)
+expr_stmt|;
+block|}
+name|char
+index|[]
+name|clist
+init|=
+operator|new
+name|char
+index|[]
+block|{
+literal|'"'
+block|,
+literal|'#'
+block|,
+literal|'%'
+block|,
+literal|'\''
+block|,
+literal|'*'
+block|,
+literal|'/'
+block|,
+literal|':'
+block|,
+literal|'='
+block|,
+literal|'?'
+block|,
+literal|'\\'
+block|,
+literal|'\u00FF'
+block|}
+decl_stmt|;
+for|for
+control|(
+name|char
+name|c
+range|:
+name|clist
+control|)
+block|{
+name|charToEscape
+operator|.
+name|set
+argument_list|(
+name|c
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|static
+name|boolean
+name|needsEscaping
+parameter_list|(
+name|char
+name|c
+parameter_list|)
+block|{
+return|return
+name|c
+operator|>=
+literal|0
+operator|&&
+name|c
+operator|<
+name|charToEscape
+operator|.
+name|size
+argument_list|()
+operator|&&
+name|charToEscape
+operator|.
+name|get
+argument_list|(
+name|c
+argument_list|)
+return|;
+block|}
+specifier|static
+name|String
+name|escapePathName
+parameter_list|(
+name|String
+name|path
+parameter_list|)
+block|{
+name|StringBuilder
+name|sb
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|path
+operator|.
+name|length
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|char
+name|c
+init|=
+name|path
+operator|.
+name|charAt
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|needsEscaping
+argument_list|(
+name|c
+argument_list|)
+condition|)
+block|{
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|'%'
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"%1$02X"
+argument_list|,
+operator|(
+name|int
+operator|)
+name|c
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|sb
+operator|.
+name|append
+argument_list|(
+name|c
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|sb
+operator|.
+name|toString
+argument_list|()
+return|;
+block|}
+specifier|static
+name|String
+name|unescapePathName
+parameter_list|(
+name|String
+name|path
+parameter_list|)
+block|{
+name|StringBuilder
+name|sb
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|path
+operator|.
+name|length
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|char
+name|c
+init|=
+name|path
+operator|.
+name|charAt
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|c
+operator|==
+literal|'%'
+operator|&&
+name|i
+operator|+
+literal|2
+operator|<
+name|path
+operator|.
+name|length
+argument_list|()
+condition|)
+block|{
+name|int
+name|code
+init|=
+operator|-
+literal|1
+decl_stmt|;
+try|try
+block|{
+name|code
+operator|=
+name|Integer
+operator|.
+name|valueOf
+argument_list|(
+name|path
+operator|.
+name|substring
+argument_list|(
+name|i
+operator|+
+literal|1
+argument_list|,
+name|i
+operator|+
+literal|3
+argument_list|)
+argument_list|,
+literal|16
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|code
+operator|=
+operator|-
+literal|1
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|code
+operator|>=
+literal|0
+condition|)
+block|{
+name|sb
+operator|.
+name|append
+argument_list|(
+operator|(
+name|char
+operator|)
+name|code
+argument_list|)
+expr_stmt|;
+name|i
+operator|+=
+literal|2
+expr_stmt|;
+continue|continue;
+block|}
+block|}
+name|sb
+operator|.
+name|append
+argument_list|(
+name|c
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|sb
+operator|.
+name|toString
+argument_list|()
+return|;
+block|}
 specifier|public
 specifier|static
 name|String
@@ -883,19 +1248,42 @@ name|suffixBuf
 operator|.
 name|append
 argument_list|(
+name|escapePathName
+argument_list|(
 name|e
 operator|.
 name|getKey
 argument_list|()
-operator|+
-literal|"="
-operator|+
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|suffixBuf
+operator|.
+name|append
+argument_list|(
+literal|'='
+argument_list|)
+expr_stmt|;
+name|suffixBuf
+operator|.
+name|append
+argument_list|(
+name|escapePathName
+argument_list|(
 name|e
 operator|.
 name|getValue
 argument_list|()
-operator|+
-literal|"/"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|suffixBuf
+operator|.
+name|append
+argument_list|(
+name|Path
+operator|.
+name|SEPARATOR
 argument_list|)
 expr_stmt|;
 block|}
@@ -1028,21 +1416,27 @@ block|{
 name|String
 name|k
 init|=
+name|unescapePathName
+argument_list|(
 name|m
 operator|.
 name|group
 argument_list|(
 literal|1
 argument_list|)
+argument_list|)
 decl_stmt|;
 name|String
 name|v
 init|=
+name|unescapePathName
+argument_list|(
 name|m
 operator|.
 name|group
 argument_list|(
 literal|2
+argument_list|)
 argument_list|)
 decl_stmt|;
 if|if
@@ -1428,6 +1822,8 @@ name|name
 operator|.
 name|append
 argument_list|(
+name|escapePathName
+argument_list|(
 operator|(
 name|partCols
 operator|.
@@ -1443,6 +1839,7 @@ operator|.
 name|toLowerCase
 argument_list|()
 argument_list|)
+argument_list|)
 expr_stmt|;
 name|name
 operator|.
@@ -1455,11 +1852,14 @@ name|name
 operator|.
 name|append
 argument_list|(
+name|escapePathName
+argument_list|(
 name|vals
 operator|.
 name|get
 argument_list|(
 name|i
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
